--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 10 00:33:21 MSK 2024
-sdk.dir=/Users/ilyaklimov/Library/Android/sdk
+#Fri May 10 01:14:28 MSK 2024
+sdk.dir=C\:\\Users\\egik_\\AppData\\Local\\Android\\Sdk
